src/test/deca/context/valid/Objet/class_return1.deca
// Description:
//    test du renvoi dans une classe 
//
// Resultats:
//   
//
// Historique:
//    cree le 18/01/2022

class A {
    int i ;
    int getA(){
        return 1 ;
    }
}

